# some-student

./: README.md
history/day1/: day1.md  file_example.c  info.md  point.c  point.c++  point_c  point_c++  temp.c++  temp_c++  vec.c++
history/day10/: task.c++  task2.c++  task3.c++
history/day2/: array_raii.c++  done_vec.c++  error_handling.c++  exc_task.cpp  exceptions.c++  file_raii.c++  simple_template.c++  task1.c++  temp_c++  vec.c++  why_move.c++
history/day3/: info.md
history/day3/task_raii/: main.cpp
history/day4/: info.md
history/day4/task2/: data.txt  main.c++
history/day4/task3/: simple_move.c++
history/day4/task_raii/: main  main.cpp
history/day5/: CMakeLists.txt
history/day5/Inc/: parce_pairs.h
history/day5/src/: parce_pairs.cpp
history/day6/: info.md  student.json
history/day6/connect_json_lib/: CMakeLists.txt  conanfile.py  file_list.json
history/day6/connect_json_lib/example/: bad_func.cpp  bad_func.hpp  main.cpp
history/day6/connect_json_lib/src/: main.cpp
history/day6/connect_json_lib/src/json/: program_level_parcer_json.cpp  program_level_parcer_json.h
history/day6/connect_json_lib/src/types/: program_level.h
history/day7/: info.md  task.c++
history/day8/: bob_iter1  info.md  task.c++
history/day9/: bob_test  fr  fr.c  set  set.cpp  vector.cpp
